--- a/project3/index.html
+++ b/project3/index.html
@@ -11,6 +11,7 @@
     <div class="wrapper">
         <div class="img">
             <img src="img/IMG_0092.jpg" alt="">
+            <h1>Велечайший Вор в законе</h1>
         </div>
     </div>
 </body>
